components/calendar-listings/styles.pcss
.calendar-listings__group:first-child .calendar-listings__heading {
    margin-top: 0;
}

.calendar-listings__heading {
    margin-bottom: space(16);
    margin-top: space(64);
    color: var(--color-navy);
}

.calendar-listings__item {
    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-rows: auto auto;
    gap: space(8) space(16);
    align-items: center;
    border: solid 1px var(--color-bright-blue);
    padding: space(16) space(16);
    margin: space(12) 0;

    @media (width >= theme('screens.md')) {
        grid-template-columns: minmax(0, 1.2fr) minmax(0, 1.2fr) minmax(0, 2fr) auto;
        grid-template-rows: 1fr;
        gap: space(4) space(16);
        padding: space(20) space(24);
    }
}

.calendar-listings__item-icon {
    width: 16px;
    height: 16px;
    margin-right: space(8);
    flex-shrink: 0;
}

.calendar-listings__item-date,
.calendar-listings__item-location {
    @apply type-small;
    display: flex;
    align-items: center;
    color: var(--color-navy);

    & a {
        text-decoration: none;
        color: var(--color-navy);

        &:hover {
            text-decoration: underline;
        }
    }
}

.calendar-listings__item-location {
    @media (width < theme('screens.md')) {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }
}

.calendar-listings__item-title {
    grid-column: 1 / -1;

    @media (width >= theme('screens.md')) {
        grid-column: auto;
    }

    & a {
        @apply type-h6;
        text-decoration: none;
        color: var(--color-navy);

        &:hover {
            text-decoration: underline;
        }
    }
}

.calendar-listings__btn {
    min-width: rem(120);
    justify-content: center;
}

.calendar-listings__item-action {
    @media (width < theme('screens.md')) {
        grid-row: 1;
        grid-column: 2;
        justify-self: end;
    }

    @media (width >= theme('screens.md')) {
        grid-column: 4;
    }
}

